[package]
name = "lianyaohu"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
lianyaohu-core = { path = "crates/lianyaohu-core" }
libc.workspace = true

[workspace]
members = [
    "crates/lianyaohu-core",
]
default-members = [
    ".",
    "crates/lianyaohu-core",
]
resolver = "3"

[workspace.package]
authors = ["Max Lv"]
edition = "2024"
license = "MIT"
version = "0.1.1"

[workspace.dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
