[workspace]
members = [
    "crates/lianyaohu-app",
    "crates/lianyaohu-core",
]
default-members = [
    "crates/lianyaohu-app",
    "crates/lianyaohu-core",
]
resolver = "3"

[workspace.package]
authors = ["Max Lv"]
edition = "2024"
homepage = "https://github.com/madeye/LianYaoHu"
license = "MIT"
repository = "https://github.com/madeye/LianYaoHu"
version = "0.1.1"

[workspace.dependencies]
lianyaohu-core = { path = "crates/lianyaohu-core", version = "0.1.1" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
